--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.373.0",
+    "mongodb": "^6.7.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18",
